--- a/No bonus/style.css
+++ b/No bonus/style.css
@@ -21,8 +21,13 @@ footer {
     height: 10vh;
 }
 
-.box {
+.bordi {
     width: calc(100% / 8);
     height: calc(100% / 8);
+}
+
+.box{
+    width: 50px;
+    height: 50px;
     border: 1px solid red;
 }
